Updated Lab Python Error Handling

--- a/lab-python-error-handling (1).ipynb
+++ b/lab-python-error-handling (1).ipynb
@@ -72,19 +72,19 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
-<<<<<<< HEAD
-=======
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1f52e16a",
+   "execution_count": 11,
+   "id": "f4b0b9ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Define the function for initializing the inventory with error handling\n",
+    "#Step 1: Initialize Inventory with Error Handling\n",
+    "\n",
+    "\n",
     "def initialize_inventory(products):\n",
-    "    inventory = {}\n",
+    "    inventory = {} \n",
     "    for product in products:\n",
     "        valid_quantity = False\n",
     "        while not valid_quantity:\n",
@@ -93,76 +93,78 @@
     "                if quantity < 0:\n",
     "                    raise ValueError(\"Invalid quantity! Please enter a non-negative value.\")\n",
     "                valid_quantity = True\n",
+    "                inventory[product] = quantity  # Store valid quantity\n",
     "            except ValueError as error:\n",
     "                print(f\"Error: {error}\")\n",
-    "        inventory[product] = quantity\n",
-    "    return inventory\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f4b0b9ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 2: Modify function to handle invalid price inputs\n",
-    "def calculate_total_price(products):\n",
-    "    prices = {}\n",
-    "    for product in products:\n",
-    "        while True:\n",
-    "            try:\n",
-    "                price = float(input(f\"Enter the price of {product}: \"))\n",
-    "                if price < 0:\n",
-    "                    raise ValueError(\"Price cannot be negative. Please enter a valid price.\")\n",
-    "                prices[product] = price\n",
-    "                break  # Exit loop when valid input is received\n",
-    "            except ValueError as error:\n",
-    "                print(f\"Error: {error}\")\n",
-    "    return prices\n"
+    "    return inventory\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6693f09a",
+   "id": "3a62123b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Modify function to handle invalid product selection and order quantities\n",
+    "#Step 2: Calculate Total Price with Error Handling\n",
+    "\n",
+    "def calculate_total_price(products):\n",
+    "    prices = {} \n",
+    "    for product in products:\n",
+    "        valid_price = False\n",
+    "        while not valid_price:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price of {product}: \"))\n",
+    "                if price < 0:\n",
+    "                    raise ValueError(\"Price cannot be negative. Please enter a valid price.\")\n",
+    "                valid_price = True\n",
+    "                prices[product] = price  # Store valid price\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "    return prices\n",
+    "   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c61c8835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Step 3: Get Customer Orders with Error Handling\n",
+    "\n",
+    "\n",
     "def get_customer_orders(inventory):\n",
-    "    orders = {}\n",
-    "    \n",
+    "    orders = {}  # Dictionary to store customer orders\n",
     "    while True:\n",
-    "        product = input(\"Enter the product name to order (or type 'exit' to finish): \").strip().lower()\n",
-    "\n",
+    "        product = input(\"Enter the product name (or 'exit' to finish): \").lower()\n",
     "        if product == \"exit\":\n",
-    "            break \n",
-    "\n",
+    "            break\n",
     "        if product not in inventory:\n",
-    "            print(\"Error: Product not found in inventory. Please enter a valid product name.\")\n",
-    "            continue  # Ask for product again\n",
-    "\n",
-    "        while True:\n",
+    "            print(\"Error: Product not found in inventory. Please enter a valid product.\")\n",
+    "            continue\n",
+    "        valid_quantity = False\n",
+    "        while not valid_quantity:\n",
     "            try:\n",
     "                quantity = int(input(f\"Enter the quantity for {product}: \"))\n",
     "                if quantity < 0:\n",
-    "                    raise ValueError(\"Quantity cannot be negative. Please enter a valid number.\")\n",
+    "                    raise ValueError(\"Quantity cannot be negative.\")\n",
     "                if quantity > inventory[product]:\n",
-    "                    raise ValueError(\"Not enough stock available. Please enter a lower quantity.\")\n",
-    "                \n",
-    "                orders[product] = quantity\n",
-    "                break  # Exit loop when valid input is received\n",
+    "                    print(f\"Error: Not enough stock available. Only {inventory[product]} left.\")\n",
+    "                else:\n",
+    "                    valid_quantity = True\n",
+    "                    orders[product] = quantity  # Store valid order\n",
     "            except ValueError as error:\n",
-    "                print(f\"Error: {error}\")\n",
-    "    \n",
+    "                print(f\"Error: {error}. Please enter a valid quantity.\")\n",
     "    return orders\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5e3949e1",
+   "execution_count": 16,
+   "id": "dd513970",
    "metadata": {},
    "outputs": [
     {
@@ -171,35 +173,32 @@
      "text": [
       "\n",
       "Initializing Inventory:\n",
-      "Error: invalid literal for int() with base 10: ''\n",
       "\n",
       "Setting Product Prices:\n",
-      "Error: could not convert string to float: ''\n",
       "\n",
       "Customer Orders:\n",
-      "Error: invalid literal for int() with base 10: 'pig'\n",
-      "Error: Product not found in inventory. Please enter a valid product name.\n",
       "\n",
       "Final Data:\n",
-      "Inventory: {'cow': 22, 'sheep': 33, 'pig': 44, 'chicken': 5, 'goat': 66}\n",
-      "Prices: {'cow': 77.0, 'sheep': 55.0, 'pig': 4.0, 'chicken': 3.0, 'goat': 2.0}\n",
-      "Customer Orders: {'cow': 2, 'pig': 33}\n"
+      "Inventory: {'cow': 11, 'chicken': 22, 'sheep': 33, 'goat': 44}\n",
+      "Prices: {'cow': 55.0, 'chicken': 66.0, 'sheep': 77.0, 'goat': 88.0}\n",
+      "Customer Orders: {'goat': 2, 'cow': 3}\n"
      ]
     }
    ],
    "source": [
-    "# Full program to test error handling\n",
+    "#Step 4: Run the Full Program\n",
+    "\n",
     "def main():\n",
-    "    products = [\"cow\", \"sheep\", \"pig\", \"chicken\", \"goat\"]\n",
+    "    products = [\"cow\", \"chicken\", \"sheep\", \"goat\"]  \n",
     "    \n",
     "    print(\"\\nInitializing Inventory:\")\n",
-    "    inventory = initialize_inventory(products)\n",
+    "    inventory = initialize_inventory(products) \n",
     "    \n",
     "    print(\"\\nSetting Product Prices:\")\n",
-    "    prices = calculate_total_price(products)\n",
+    "    prices = calculate_total_price(products)  \n",
     "\n",
     "    print(\"\\nCustomer Orders:\")\n",
-    "    customer_orders = get_customer_orders(inventory)\n",
+    "    customer_orders = get_customer_orders(inventory)  \n",
     "\n",
     "    print(\"\\nFinal Data:\")\n",
     "    print(\"Inventory:\", inventory)\n",
@@ -214,20 +213,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28044a0",
+   "id": "98628e3a",
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 3104567 (Submitting Lab Python Error Handling)
   }
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python 3 (ipykernel)",
-=======
    "display_name": "base",
->>>>>>> 3104567 (Submitting Lab Python Error Handling)
    "language": "python",
    "name": "python3"
   },
@@ -241,11 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.9.13"
-=======
    "version": "3.12.4"
->>>>>>> 3104567 (Submitting Lab Python Error Handling)
   }
  },
  "nbformat": 4,
